<resources>
    <string name="titleMain" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Тёмная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="contactSupport">Написать в поддержку</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
    <string name="shareUrl">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="sendTitle">Отправить письмо</string>
    <string name="sendToEmail">danparkin@yandex.ru</string>
    <string name="sendHeader">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sendText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="noInternet">Проблемы со связью\n\nЗагрузка не удалась.Проверьте \n подключение к интернету"</string>
    <string name="NoResults">Ничего не нашлось</string>
    <string name="default_playtime_value">00:00</string>
    <string name="mail_app_not_found">У Вас не установлен ни один почтовый клиент!</string>
    <string name="app_name">Playlist Maker</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="add_playlist">Новый плейлист</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали
        \nни одного плейлиста</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_ask">Хотите удалить плейлист?</string>

    <!--/PlaylistInfoFragment-->

    <!--EditPlaylistFragment-->

    <string name="edit_current_playlist">Редактировать</string>
    <string name="save_button_edit">Сохранить</string>
    <string name="share_app_not_found">Приложение не найдено</string>
</resources>