<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bg_blue"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="16dp"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/search"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:letterSpacing=".05"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/mediateka"
            android:textSize="22sp"
            android:letterSpacing=".05"
            app:icon="@drawable/ic_mediateka"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            />
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="28dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:letterSpacing=".05"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            />

    </LinearLayout>
</LinearLayout>