<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".library.ui.fragment.PlaylistInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_gray">

        <ImageView
            android:id="@+id/playlist_info_cover_imageview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/text_gray"
            android:scaleType="center"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder_max" />

        <TextView
            android:id="@+id/name_of_playlist_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_gray"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_info_cover_imageview"
            tools:text="Best songs 2023" />

        <TextView
            android:id="@+id/year_of_playlist_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_gray"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_of_playlist_info_textview"
            tools:text="2023" />

        <LinearLayout
            android:id="@+id/playlist_info_data_string_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_gray"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_of_playlist_info_textview">

            <TextView
                android:id="@+id/total_minutes_playlist_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/text_gray"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="300 минут" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_dot_black" />

            <TextView
                android:id="@+id/amount_of_tracks_playlist_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/text_gray"
                android:fontFamily="@font/ys_display_regular"
                android:text="98 треков"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/playlist_info_backarrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/playlist_info_share_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/text_gray"
            android:src="@drawable/ic_share_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_info_data_string_linearlayout" />

        <ImageView
            android:id="@+id/playlist_info_menu_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/text_gray"
            android:src="@drawable/menu_playlist"
            app:layout_constraintStart_toEndOf="@id/playlist_info_share_imageview"
            app:layout_constraintTop_toBottomOf="@id/playlist_info_data_string_linearlayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlist_info_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_shape"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="190dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bottom" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_info_bottom_sheet_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlist_menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_shape"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="383dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bottom" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_playlist_info_bottom_sheet"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="13dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/playlist_info_cover_min_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/placeholder" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/name_of_playlist_info_min_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/main_black"
                android:textColorHint="@color/main_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/cardView_playlist_info_bottom_sheet"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Best songs 2023" />

            <TextView
                android:id="@+id/amount_of_tracks_playlist_info_min_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/main_black"
                android:textSize="11sp"
                android:tint="@color/main_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardView_playlist_info_bottom_sheet"
                tools:text="98 треков" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/share_playlist_framelayout"
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:fontFamily="@font/ys_display_regular"
                android:textSize="16sp"
                android:textColor="@color/main_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/share_playlist" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/edit_playlist_framelayout"
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:fontFamily="@font/ys_display_regular"
                android:textSize="16sp"
                android:textColor="@color/main_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/edit_playlist" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/delete_playlist_framelayout"
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:fontFamily="@font/ys_display_regular"
                android:textSize="16sp"
                android:textColor="@color/main_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/delete_playlist" />

        </FrameLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>